// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseButton should render as disabled 1`] = `
<button
  className="CloseButton"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <svg
    className="icon"
  />
</button>
`;

exports[`CloseButton should render with required props 1`] = `
<button
  className="CloseButton"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <svg
    className="icon"
  />
</button>
`;
